<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".presentation.game.GameFragment">

    <TextView
        android:id="@+id/textViewFirstTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/allerta"
        android:text="@string/first_team"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSecondTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/allerta"
        android:text="@string/second_team"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFirstTeam"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFirstTeam">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/game_card_background">

            <TextView
                android:id="@+id/textViewFirstTeamFirstUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:layout_constraintBottom_toTopOf="@+id/textViewFirstTeamSecondUser"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Kullanici 1" />

            <TextView
                android:id="@+id/textViewFirstTeamSecondUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:maxLength="18"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewFirstTeamFirstUser"
                tools:text="Zemzeme41 C c c" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewFirstTeamPoint"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:background="@drawable/game_card_background"
        android:gravity="center"
        android:maxLength="2"
        android:maxLines="1"
        android:padding="1dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardViewFirstTeam"
        app:layout_constraintStart_toEndOf="@+id/cardViewFirstTeam"
        app:layout_constraintTop_toTopOf="@+id/cardViewFirstTeam"
        tools:text="0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSecondTeam"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSecondTeam">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/game_card_background">

            <TextView
                android:id="@+id/textViewSecondTeamFirstUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:layout_constraintBottom_toTopOf="@+id/textViewSecondTeamSecondUser"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Kullanici 1" />

            <TextView
                android:id="@+id/textViewSecondTeamSecondUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:maxLength="18"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSecondTeamFirstUser"
                tools:text="Zemzeme41 C c c" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewSecondTeamPoint"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/game_card_background"
        android:gravity="center"
        android:maxLength="2"
        android:maxLines="1"
        android:padding="1dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardViewSecondTeam"
        app:layout_constraintEnd_toStartOf="@+id/cardViewSecondTeam"
        app:layout_constraintTop_toTopOf="@+id/cardViewSecondTeam"
        tools:text="0" />

    <LinearLayout
        android:id="@+id/linearLayoutWords"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/game_card_background"
        android:gravity="top|center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonTaboo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFirstTeamPoint">

        <TextView
            android:id="@+id/textViewTrueAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/allerta"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Dogru Cevap" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/textViewFalseAnswer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/allerta"
            android:textSize="15sp"
            tools:text="Yanlis Cevap" />

        <TextView
            android:id="@+id/textViewFalseAnswer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/allerta"
            android:textSize="15sp"
            tools:text="Yanlis Cevap" />

        <TextView
            android:id="@+id/textViewFalseAnswer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/allerta"
            android:textSize="15sp"
            tools:text="Yanlis Cevap" />

        <TextView
            android:id="@+id/textViewFalseAnswer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/allerta"
            android:textSize="15sp"
            tools:text="Yanlis Cevap" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonTaboo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/red"
        android:paddingVertical="10dp"
        android:text="@string/tabu"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/textViewCounter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="30" />

    <ImageView
        android:id="@+id/imageViewTrueAnswer"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:contentDescription="@null"
        android:src="@drawable/tick_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageViewChange"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:contentDescription="@null"
        android:src="@drawable/recycle_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>